# crowd-detection

./: README.md  crowd_detector.py  demo_video.py  fix_environment.py  install.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  streamlit_app.py  test_detector.py  test_imports.py  verify_system.py
